2008-05-27  Martin Leidig  <mleidig@schlund.de>

	Changed the pfx:button behaviour for pages with authconstraints, which
	don't set an authpage: until now the links to such pages were active
	and requesting them ended with an exception. Now these pages are
	handled like 'invisible', non-accessible, pages, i.e. no link is 
	created, but a span, optionally using the invisibleclass' CSS (or 
	pfx:invisible content). On demand we could also introduce special 
	unauthorized attributes/tags, for now this case is handled together
	with the non-accessible case.

	* src/de/schlund/pfixcore/util/TransformerCallback.java: add method
	checkAuthorization, which returns the authorization state of a page
	* projects/core/xsl/navigation.xsl: add checkAuthorization call to
	isAccessible test (as disjunction)
	* projects/core/xsl/xmlfontify.xsl: show authorization state of 
	each page
	* projects/core/xsl/functions.xsl: added pfx:checkAuthorization
	function

	Added test case:
	* projects/samplebank/txt/common.xml
	* projects/samplebank/conf/config.conf.xml
	* projects/samplebank/conf/depend.xml

2008-05-23  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/config/impl/ConditionRule.java: resolve
	to the authconstraint condition instead of the authconstraint itself

2008-05-21  Martin Leidig  <mleidig@schlund.de>

	Added support for authconstraint reusage. Now it's possible to
	reference top-level authconstraints from within other authconstraints
	or their nested conditions (using <authconstraint ref="..."/>).
	At runtime the reference will be resolved and replaced by the 
	authconstraint's condition.
	Added AuthAdmin MBean to list/add/revoke roles via jconsole (for
	testing).

	Modified:
	* src/de/schlund/pfixcore/auth/AuthenticationImpl.java: throw 
	RoleNotFoundException if non-exisiting role is tried to be added
	* src/de/schlund/pfixcore/auth/Authentication.java: addRole now
	throws RoleNotFoundException